--- a/pizza_s.htm
+++ b/pizza_s.htm
@@ -36,7 +36,7 @@
       <p>Garnish:
       <select name="ga" multiple size="2">
          <option value="Chilli Pepper">Extra Chilli Pepper (1.00 &euro;)</option>
-         <option value="Olives">Extra Oliven (1.20 &euro;)</option>
+         <option value="Olives">Extra Olives (1.20 &euro;)</option>
          <option value="Anchovies">Extra Anchovies (1.50 &euro;)</option>
       </select></p>
 
